@@ -1,3 +1,7 @@
+* 2013-03-11 - viktor.pracht@open-xchange.com
+
+ - Implemented story 44467519: Implement locale-dependent order of address fields.
+
 * 2013-03-08 - viktor.pracht@open-xchange.com
 
  - Implemented story 44467347: Implement Japanese furigana fields in contacts.
